# rosalind

./: Cargo.toml  README.md
src/: main.rs  utils.rs
src/utils/: fasta.rs
