[package]
name = "rosalind"
version = "0.1.0"
authors = ["Tianyi <ShiTianyi2001@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cs = "0.0.4"
min-max = "0.1.8"
nom = "5.1.2"


[[bin]]
name = "dna"
path = "src/bin/dna.rs"
